[package]
name = "voiceater"
version = "0.1.0"
authors = ["Rolan Ibragimov <roland.ibr@yahoo.com>"]
edition = "2018"
license = "MIT"

[dependencies]
dotenv = "0.15.0"
teloxide = { version = "0.4", features = ["auto-send", "macros"] }
log = "0.4.8"
pretty_env_logger = "0.4.0"
tokio = { version =  "1.3", features = ["rt-multi-thread", "macros"] }
tokio-stream = "0.1.3"
lazy_static = "1.4.0"
anyhow = "1.0.41"